--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,14 @@
-<% for book in @books do %>
-  <%= book.title %>
-  <%= book.thoughts %>
-<% end %>
+<table>
+  <thead>
+    <th>Title</th>
+    <th>Thoughts</th>
+  </thead>
+  <% for book in @books do %>
+    <tbody>
+      <td><%= book.title %></td>
+      <td><%= book.thoughts %></td>
+    </tbody>
+  <% end %>
+</table>
+
+<%= will_paginate @books %>
