--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,16 @@
-<table>
-  <thead>
-    <th>Title</th>
-    <th>Thoughts</th>
-  </thead>
-  <% for book in @books do %>
-    <tbody>
-      <td><%= book.title %></td>
-      <td><%= book.thoughts %></td>
-    </tbody>
-  <% end %>
-</table>
+<div class="table-div">
+  <table>
+    <thead>
+      <th>Title</th>
+      <th>Thoughts</th>
+    </thead>
+    <% for book in @books do %>
+      <tbody>
+        <td><%= book.title %></td>
+        <td><%= book.thoughts %></td>
+      </tbody>
+    <% end %>
+  </table>
+</div>
 
 <%= will_paginate @books %>
